--- a/async-openai/Cargo.toml
+++ b/async-openai/Cargo.toml
@@ -25,8 +25,15 @@ native-tls-vendored = ["reqwest/native-tls-vendored"]
 realtime = ["dep:tokio-tungstenite"]
 # Bring your own types
 byot = []
+# Enable YAML support for structured output
+yaml = ["dep:serde_yaml"]
+# Enable XML support for structured output
+xml = ["dep:quick-xml"]
+# Enable JSON Schema validation
+schema-validation = ["dep:jsonschema", "dep:schemars", "dep:url", "dep:anyhow"]
 
 [dependencies]
+anyhow = { version = "1.0", optional = true }
 async-openai-macros = { path = "../async-openai-macros", version = "0.1.0" }
 backoff = { version = "0.4.0", features = ["tokio"] }
 base64 = "0.22.1"
@@ -50,6 +57,12 @@ secrecy = { version = "0.10.3", features = ["serde"] }
 bytes = "1.9.0"
 eventsource-stream = "0.2.3"
 tokio-tungstenite = { version = "0.26.1", optional = true, default-features = false }
+regex = "1.10.5"
+serde_yaml = { version = "0.9.33", optional = true }
+quick-xml = { version = "0.31.0", features = ["serialize"], optional = true }
+jsonschema = { version = "0.18.1", optional = true }
+schemars = { version = "0.8.16", optional = true }
+url = { version = "2.5.0", optional = true }
 
 [dev-dependencies]
 tokio-test = "0.4.4"
