--- a/examples/structured_output/Cargo.toml
+++ b/examples/structured_output/Cargo.toml
@@ -11,7 +11,7 @@ path = "main.rs"
 async-openai = { path = "../../async-openai", features = ["schema-validation"] }
 tokio = { version = "1.0", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
+serde_json = { version = "1.0", features = ["preserve_order"] }
 schemars = "0.8"
 dotenv = "0.15" 
 futures = "0.3.31"
